--- a/ComicBookGallery/Views/ComicBook/Detail.cshtml
+++ b/ComicBookGallery/Views/ComicBook/Detail.cshtml
@@ -28,7 +28,7 @@
         <div>@Html.Raw(Model.DescriptionHtml)</div>
     </div>
     <div class="col-md-6">
-        <img src="/Images/the-amazing-spider-man-700.jpg"
+        <img src="/Images/@Model.CoverImageFileName"
              alt="@Model.DisplayText" class="img-responsive" />
     </div>
 </div>
